# ros2_amcl_lite

./: .gitattributes  .gitignore  CMakeLists.txt  EXPERIMENT_PROCEDURE.md  IMPLEMENTATION_SUMMARY.md  README.md  package.xml
include/ros2_amcl_lite/: dynamic_aware_sensor_model.hpp  dynamic_object_detector.hpp  likelihood_field.hpp  particle_filter.hpp  research_data_logger.hpp
launch/: amcl_lite_dynamic.launch.py  research_experiment.launch.py
scripts/: analyze_research_data.py  run_research_experiments.py
src/: amcl_lite_node.cpp  dynamic_aware_sensor_model.cpp  dynamic_object_detector.cpp  likelihood_field.cpp  particle_filter.cpp  research_data_logger.cpp
